Add macOS support, fix bugs and refactor some files.